Fixed Api request

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,21 +1,13 @@
 ---
-import '../styles/global.css'
-import TopBar from "../components/TopBar.astro"
+import TopBar from "../components/TopBar.astro";
+import BaseLayout from "./BaseLayout.astro";
+
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		
-		<TopBar/>
 
-        <slot/>
+<BaseLayout>
+	<TopBar/>
 
-	</body>
-</html>
+	<slot/>	
+
+</BaseLayout>
