--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,9 +3,9 @@ import MainLayout from "../layouts/MainLayout.astro"
 import BlogPreview from "../components/BlogPreview.astro"
 
 
-const response = await fetch('http://localhost:5280/Post/GetPosts/0');
-const data = await response.json();
-const show = data.data[0]
+// const response = await fetch('http://localhost:5280/Post/GetPosts/0');
+// const data = await response.json();
+// const show = data.data[0]
 
 
 
@@ -15,16 +15,16 @@ const show = data.data[0]
 <MainLayout>
 
 	<div class="blogs">	
-		<!-- <BlogPreview/>
+		<BlogPreview/>
 		<BlogPreview/>
 		<BlogPreview/>
 		<BlogPreview/>
 		<BlogPreview/>
 		<BlogPreview/>
 		<BlogPreview/>	
-		<BlogPreview/> -->
+		<BlogPreview/>
 
-		<p>{show.title}</p>
+		<!-- <p>{show.title}</p> -->
 	</div>
 
 </MainLayout>
