--- a/src/components/BlogPreview.astro
+++ b/src/components/BlogPreview.astro
@@ -24,7 +24,7 @@ const {title, comments, liked, userName} = Astro.props
             </div>
 
             <div class="post_img">
-                <img src="public/img/anime cute wallpaper backgrounds.jpeg" alt="">
+                <img src="img/anime cute wallpaper backgrounds.jpeg" alt="">
             </div>
         </div>
 
@@ -53,7 +53,7 @@ const {title, comments, liked, userName} = Astro.props
 
 
 <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+    
 
 
 
@@ -63,7 +63,6 @@ const {title, comments, liked, userName} = Astro.props
     }
 
     .middle_text{
-        font-family: 'Poppins';
         font-size: 20px;
         font-weight: 500;
         
